plugins {
    id 'com.github.johnrengelman.shadow'
    id 'java-library'
    id 'com.diffplug.spotless'
}

repositories {
    mavenCentral()
    maven { url uri("https://maven.fabricmc.net") }
    maven { url "https://maven.neoforged.net/releases" }
}

dependencies {
    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
    compileOnly 'com.google.auto.service:auto-service:1.1.1'

    implementation 'com.google.code.gson:gson:2.10.1'
    shadow 'com.google.code.gson:gson:2.10.1'
    implementation 'com.google.auto:auto-common:1.2.1'
    shadow 'com.google.auto:auto-common:1.2.1'
    implementation 'com.google.guava:guava:21.0'
    shadow 'com.google.guava:guava:21.0'

    implementation project(":annotations")
    shadow project(":annotations")
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
    options.release = 17
}

shadowJar {
    include 'META-INF/services/javax.annotation.processing.Processor'
}

spotless {
    java {
        removeUnusedImports()
    }
}
version = '1.1.4'
